working on home page design.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Post/Details.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Post/Details.cshtml
@@ -43,7 +43,7 @@
         @Html.Raw(postDetails?.Content)
     </div>
     <br />
-    <p><a href="/Post/">All Post</a></p>
+    <p><a href="/Post/">@_T["All Post"]</a></p>
 </div>
 
 @section Scripts{
