--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/wwwroot/css/cmsTheme.css
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/wwwroot/css/cmsTheme.css
@@ -205,3 +205,15 @@ figure.snip1174 {
     font-size: 24px;
 }
 /*Card Design end*/
+
+.stickyPost {
+    margin-top: 15px;
+}
+
+.featuredPosts {
+    margin-bottom:10px;
+}
+
+.allPosts{
+
+}
