--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsHome/Index.cshtml
@@ -1,122 +1,105 @@
 ﻿@using NetCoreCMS.Framework.Utility
+@using NetCoreCMS.Modules.Cms.Models.ViewModels;
+
+@model HomePageViewModel
+
 @{
     Layout = Constants.SiteLayoutName;
-    if(ViewBag.Layout.Trim() != "")
+    var active = "active";
+    var count = 0;
+    ViewBag.CurrentLanguage = Model.CurrentLanguage;
+}
+
+@if (Model.StickyPost != null)
+{
+    <div class="stickyPost" style="margin-top:10px;">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    <i class="fa fa-thumb-tack"></i>@_T["Sticky"]
+                </div>
+            </div>
+            <div class="panel-body">
+                @Html.Partial("_PostRow", Model.StickyPost)
+            </div>
+        </div>
+    </div>
+}
+
+@if (Model.PageNumber == 0 && Model.FeaturedPosts != null && Model.FeaturedPosts.Count > 0)
+{
+    <div class="featuredPosts" style="margin-bottom:10px;">
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+
+            <ol class="carousel-indicators">
+                @foreach (var item in Model.FeaturedPosts)
+                {
+                    <li data-target="#myCarousel" data-slide-to="@count" class="@active"></li>
+                    active = "";
+                    count++;
+                }
+            </ol>
+
+            <div class="carousel-inner" role="listbox" style="border: dashed 1px;">
+                @{ active = "active";}
+                @foreach (var item in Model.FeaturedPosts)
+                {
+                    var post = ViewHelper.GetCurrentLanguagePostDetails(item, Model.CurrentLanguage, true);
+
+                    if (post != null)
+                    {
+                        <div class="item @active" >
+                            @if (string.IsNullOrEmpty(item.ThumImage) == false)
+                            {
+                                <a href="/Post/?slug=@post.Slug"><img src="@item.ThumImage" alt="" class="img-responsive" width="100%" /></a>
+                            }
+                            <div role="option" style="z-index:1000000; padding: 10px 10px;">
+                                <a href="/Post/?slug=@post.Slug"><h3>@post.Title</h3></a>
+                                <p >
+                                    @Html.Raw(post.Content)
+                                </p>
+                            </div>
+                        </div>
+
+                        active = "";
+                    }
+                }
+            </div>
+            @if (Model.FeaturedPosts.Count > 1)
+            {
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev" style="height:70%">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next" style="height:70%">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            }
+        </div>
+    </div>
+}
+ 
+@if (Model.AllPosts != null && Model.AllPosts.Count > 0)
+{
+    <div class="allposts">
+        @foreach (var item in Model.AllPosts)
+        {
+            @Html.Partial("_PostRow", item)
+        }
+    </div>
+}
+
+<div class="row">
+    @if (Model.PreviousPage >= 0)
     {
-        Layout = "_"+ViewBag.Layout;
+        <div class="pull-left"><a href="/CmsHome/?pageNumber=@Model.PreviousPage">< @_T["Previous"]</a></div>
     }
-}
-
-@if (ViewBag.Content.Trim() != "")
-{
-    @Html.Raw(ViewBag.Content)    
-}
-else
-{
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how to build ASP.NET apps that can run anywhere.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        There are powerful new features in Visual Studio for building modern web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="item">
-                <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-                <div class="carousel-caption" role="option">
-                    <p>
-                        Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                        <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                            Learn More
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-
-    <div class="row">
-        <div class="col-md-3">
-            <h2>Application uses</h2>
-            <ul>
-                <li>Sample pages using ASP.NET Core MVC</li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-                <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h2>How to</h2>
-            <ul>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h2>Overview</h2>
-            <ul>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3">
-            <h2>Run & Deploy</h2>
-            <ul>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-                <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-            </ul>
-        </div>
-    </div>
-}
+    @if (Model.NextPage <= Model.TotalPage)
+    {
+        <div class="pull-right" ><a href="/CmsHome/?pageNumber=@Model.NextPage">@_T["Next"] ></a></div>
+    }    
+</div>
 
 
