--- a/NetCoreCMS.Web/Themes/Default/wwwroot/css/dark.css
+++ b/NetCoreCMS.Web/Themes/Default/wwwroot/css/dark.css
@@ -12,7 +12,8 @@ body {
 
 /*Side design*/
 .topHeader {
-    height: 100px;
+    height: 80px;
+    padding-top:5px;
 }
 /*.topMenu {
     display: block;
@@ -34,21 +35,22 @@ body {
 
 .topLogo {
     float: left;
+    margin-top:15px;
 }
-    .topLogo a {
-        color: inherit;
-    }
-        .topLogo a:hover {
-            text-decoration: none;
-        }
-        .topLogo a:visited {
-            color: inherit;
-            text-decoration: none;
-        }
-    .topLogo h4 {
-        padding-left: 100px;
-        color: gray;
-    }
+.topLogo a {
+    color: inherit;
+}
+.topLogo a:hover {
+    text-decoration: none;
+}
+.topLogo a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+.topLogo h4 {
+    padding-left: 100px;
+    color: gray;
+}
 
 @media only screen and (max-width: 766px) {
     .topMenu {
