--- a/NetCoreCMS.Web/Themes/Default/wwwroot/css/light.css
+++ b/NetCoreCMS.Web/Themes/Default/wwwroot/css/light.css
@@ -3,46 +3,55 @@
     /*SolaimanLipi,'Siyam Rupali',*/
 }
 
-.home{
-    border:solid 1px;
+.home {
+    border: solid 1px;
 }
 
 /*Side design*/
 .topHeader {
-    height: 100px;
-}    
+    height: 80px;
+    padding-top: 5px;
+}
 /*.topMenu {
     display: block;
 }*/
-.navbar-brand-with-top-menu{
-    display:none;
+.navbar-brand-with-top-menu {
+    display: none;
 }
-.userMenu{
-    display:none;
+
+.userMenu {
+    display: none;
 }
-.topWidgetZone{
-    float:right;
-    max-height:80px;
+
+.topWidgetZone {
+    float: right;
+    max-height: 80px;
     max-width: 60%;
-    overflow:hidden;
+    overflow: hidden;
 }
+
 .topLogo {
     float: left;
+    margin-top: 15px;
 }
-    .topLogo a {
-        color: inherit;
-    }
-        .topLogo a:hover {
-            text-decoration: none;
-        }
-        .topLogo a:visited {
-            color: inherit;
-            text-decoration: none;
-        }
-    .topLogo h4 {
-        padding-left: 100px;
-        color: gray;
-    }
+
+.topLogo a {
+    color: inherit;
+}
+
+.topLogo a:hover {
+    text-decoration: none;
+}
+
+.topLogo a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
+.topLogo h4 {
+    padding-left: 100px;
+    color: gray;
+}
 
 @media only screen and (max-width: 766px) {
     .topMenu {
@@ -54,23 +63,24 @@
     .userMenu {
         display: block;
     }
+
     .topWidgetZone {
-        display:none;
+        display: none;
     }
 
     .topLogo {
-        width:100%;
+        width: 100%;
         text-align: center;
     }
 
-        .topLogo h1 {
-            text-align:center;
-        }
+    .topLogo h1 {
+        text-align: center;
+    }
 
-        .topLogo h4 {
-            padding-left: initial;
-            color: gray;
-        }
+    .topLogo h4 {
+        padding-left: initial;
+        color: gray;
+    }
 }
 
 .mainBody {
@@ -78,15 +88,18 @@
     padding: 0px;
     word-wrap: break-word;
 }
+
 .fullWidthSlider {
     margin-top: -20px;
     margin-bottom: 20px;
 }
+
 .copyright {
     float: left;
 }
-.poweredby{
-    float:right;
-    text-align:right;
+
+.poweredby {
+    float: right;
+    text-align: right;
 }
 /*site design*/
