--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/EmailSettings.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/EmailSettings.cshtml
@@ -45,7 +45,7 @@
 
             <div class="form-group">
                 <div class="col-sm-3 text-right"><label>Use SSL: </label></div>
-                <div class="col-sm-5"><input asp-for="UseSSL" type="checkbox" value="@isChecked" @checkedTxt /> </div>
+                <div class="col-sm-5"><input asp-for="UseSSL" type="checkbox" @*value="@isChecked"*@ @checkedTxt /> </div>
             </div>
 
             <div class="form-group">
