--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
@@ -18,7 +18,7 @@
 @using NetCoreCMS.Modules.Cms.Lib;
 
 @inject IStringLocalizer _T
-@inject LanguageDetector LanguageDetector
+@inject NccLanguageDetector LanguageDetector
 
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
