--- a/NetCoreCMS.Web/Themes/NccSeventeen/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Views/_ViewImports.cshtml
@@ -11,7 +11,7 @@
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Themes
-
+@using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
 @using NetCoreCMS.Themes.NccSeventeen.Lib
 
 @addTagHelper *, NetCoreCMS.Framework
