--- a/NetCoreCMS.Web/Themes/Default/Shared/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/_ViewImports.cshtml
@@ -7,8 +7,10 @@
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Themes
-
+@using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
 @using NetCoreCMS.Themes.Default.Lib
+@using Microsoft.Extensions.Localization
+@using NetCoreCMS.Framework.i18n
 
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
@@ -16,6 +18,5 @@
 @inject SignInManager<NccUser> SignInManager
 @inject UserManager<NccUser> UserManager
 
-@using Microsoft.Extensions.Localization
-@using NetCoreCMS.Framework.i18n
+@inject NccLanguageDetector LanguageDetector
 @inject IStringLocalizer _T
