--- a/NetCoreCMS.Web/Themes/Default/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Views/_ViewImports.cshtml
@@ -12,16 +12,20 @@
 @using NetCoreCMS.Framework.Core.Mvc.Views.TagHelpers
 @using NetCoreCMS.Themes.Default.Lib
 @using NetCoreCMS.Framework.Core.Mvc.Views.TagHelpers
+@using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
+
+@using Microsoft.Extensions.Localization
+@using NetCoreCMS.Framework.i18n
+@using NetCoreCMS.Framework.Themes
 
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @inject SignInManager<NccUser> SignInManager
 @inject UserManager<NccUser> UserManager
+@inject NccLanguageDetector LanguageDetector
 @inject IStringLocalizer _T
 
-@using Microsoft.Extensions.Localization
-@using NetCoreCMS.Framework.i18n
-@using NetCoreCMS.Framework.Themes
+
 
 
