--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/_ViewImports.cshtml
@@ -12,6 +12,7 @@
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Themes
+@using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
 
 @using NetCoreCMS.Themes.NccSeventeen.Lib
 
