Changes current language selection system.

--- a/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/HelloHome/Index.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/HelloHome/Index.cshtml
@@ -3,7 +3,7 @@
 
 @{
     Layout = Constants.SiteLayoutName;
-    var _T = new NccTranslator<SharedResource>(TempData["CurrentLanguage"].ToString());
+    var _T = new NccTranslator<SharedResource>(LanguageDetector.GetCurrentLanguage());
 }
 
 <h1> Holaaaaaaaaa !!! It's a sample module</h1>
