--- a/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/_ViewImports.cshtml
@@ -5,3 +5,6 @@
 @using NetCoreCMS.Framework.i18n
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@inject NccLanguageDetector LanguageDetector
+
