--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_FullWidthSlider.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_FullWidthSlider.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    string currentLanguage = this.ViewContext.HttpContext.Items["currentLanguage"].ToString();
+    string currentLanguage = LanguageDetector.GetCurrentLanguage();
     NccTranslator<ThemeTranslation> _TT = new NccTranslator<ThemeTranslation>(currentLanguage);
 }
 <!-- Full Width Slider Start -->
