--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_NavbarPart.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_NavbarPart.cshtml
@@ -4,5 +4,4 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
 </button>
-@*<a asp-area="" asp-controller="CmsHome" asp-action="Index" class="navbar-brand">@WebSite.Name</a>*@
-<div id="navbarWebsiteName" class="navbar-brand navbar-brand-with-top-menu">@ThemeHelper.GetWebSiteName((string)this.ViewContext.HttpContext.Items["currentLanguage"])</div>
+<div id="navbarWebsiteName" class="navbar-brand navbar-brand-with-top-menu">@ThemeHelper.GetWebSiteName()</div>
