--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_SelectLanguagePartial.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_SelectLanguagePartial.cshtml
@@ -5,7 +5,7 @@
 @inject IOptions<RequestLocalizationOptions> LocOptions
 
 @{    
-    var currentLanguage = (string)this.ViewContext.HttpContext.Items["currentLanguage"];
+    var currentLanguage = LanguageDetector.GetCurrentLanguage();
     NccTranslator<ThemeTranslation> _TT = new NccTranslator<ThemeTranslation>(currentLanguage);
 
     var requestCulture = Context.Features.Get<IRequestCultureFeature>();
