--- a/NetCoreCMS.Web/Themes/NccSeventeen/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Views/_ViewImports.cshtml
@@ -5,7 +5,6 @@
 @using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
 @using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
-
 @using NetCoreCMS.Framework.Utility
 @using NetCoreCMS.Framework.Modules
 @using NetCoreCMS.Framework.Modules.Widgets
@@ -13,12 +12,12 @@
 @using NetCoreCMS.Framework.Themes
 @using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
 @using NetCoreCMS.Themes.NccSeventeen.Lib
+@using Microsoft.Extensions.Localization
+@using NetCoreCMS.Framework.i18n
 
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @inject SignInManager<NccUser> SignInManager
 @inject UserManager<NccUser> UserManager
-
-@using Microsoft.Extensions.Localization
-@using NetCoreCMS.Framework.i18n
+@inject NccLanguageDetector LanguageDetector
