--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/_ViewImports.cshtml
@@ -11,6 +11,7 @@
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Core.Mvc.Models
+@using NetCoreCMS.Framework.Core.Mvc.Views
 
 @using NetCoreCMS.Framework.i18n
 @using NetCoreCMS.Modules.Cms.Models.ViewModels;
