--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -21,7 +21,7 @@
     ViewData["MetaKeyword"] = pageDetails.MetaKeyword;
 }
  
-@section Styles{
+@section StyleFooter{
     <style>
        @Html.Raw("        ");
     </style>
@@ -30,6 +30,6 @@
     @Html.Raw(pageDetails.Content)
 </div>
  
-@section Scripts{
+@section ScriptFooter{
 
 }
