--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using NetCoreCMS.Framework.Modules
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
+@using NetCoreCMS.Framework.Core.Mvc.Views
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
