--- a/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 
 @using Microsoft.Extensions.Localization
 @using NetCoreCMS.Framework.i18n
+@using NetCoreCMS.Framework.Core.Mvc.Views
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject NccLanguageDetector LanguageDetector
