--- a/NetCoreCMS.Web/Modules/NetCoreCMS.News/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.News/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using NetCoreCMS.Framework.Utility
 @using NetCoreCMS.Framework.Modules
 @using NetCoreCMS.Framework.Modules.Widgets
+@using NetCoreCMS.Framework.Core.Mvc.Views
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
