--- a/NetCoreCMS.Web/Modules/NetCoreCMS.Subscription/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.Subscription/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using NetCoreCMS.Framework.Modules
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.i18n
+@using NetCoreCMS.Framework.Core.Mvc.Views
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
