--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Header.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Header.cshtml
@@ -1,18 +1,10 @@
-﻿@{
-    string currentLanguage = LanguageDetector.GetCurrentLanguage();
-    NccTranslator<ThemeTranslation> _TT = new NccTranslator<ThemeTranslation>(currentLanguage);
-}
-<!-- Loading -->
-<div id="loadingMask" class="loader loader-double"></div>
-
-<!-- Header -->
-<div class="container-fluid topHeader">
+﻿<div class="container-fluid topHeader">
     <div class="container">
         <div class="topLogo">
             @if (string.IsNullOrEmpty(ThemeHelper.GetWebSiteLogoUrl()))
             {
                 <a href="/"><h1>@ThemeHelper.GetWebSiteName()</h1></a>
-                <h4>@ThemeHelper.GetWebSiteTagline()</h4>
+                        <h4>@ThemeHelper.GetWebSiteTagline()</h4>
             }
             else
             {
@@ -21,34 +13,35 @@
                 </a>
             }
         </div>
+
+        <!-- Zone TOP Start-->
         <div id="topMenu" class="topMenu pull-right">
             @if (GlobalConfig.WebSite.IsMultiLangual == true)
             {
                 @await Html.PartialAsync("_SelectLanguagePartial")
             }
             @{
-                var menus = GlobalConfig.Menus.Where(x => x.Position == "Top" && (string.IsNullOrEmpty(x.MenuLanguage) || x.MenuLanguage == currentLanguage));
+                var menus = GlobalConfig.Menus.Where(x => x.Position == "Top" && (x.MenuLanguage == ThemeHelper.GetCurrentLanguage() || x.MenuLanguage == "")).ToList();
                 foreach (var item in menus)
                 {
                     foreach (var menuItem in item.MenuItems)
                     {
-                        <a href="@NccUrlHelper.AddLanguageToUrl(currentLanguage, menuItem.Url)">@menuItem.Name</a><span> | </span>
+                        <a href="@NccUrlHelper.AddLanguageToUrl(ThemeHelper.GetCurrentLanguage(), menuItem.Url) ">@menuItem.Name</a><span> | </span>
                     }
                 }
                 if (SignInManager.IsSignedIn(User))
                 {
-                    <a asp-area="" asp-controller="Admin" asp-action="Index">@_TT["Admin"]</a><span> | </span>
-                    <a asp-area="" asp-controller="ManageAccount" asp-action="Index" title="Manage">@_TT["Hello"] @UserManager.GetUserName(User)!</a><span> | </span>
-                    <a asp-area="" asp-controller="Account" asp-action="Logout">@_TT["Log out"]</a>
+                    <a asp-area="" asp-controller="Admin" asp-action="Index">@_T["Admin"]</a><span> | </span>
+                            <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">@_T["Hello"] @UserManager.GetUserName(User)!</a><span> | </span>
+                            <a asp-area="" asp-controller="Account" asp-action="Logout">@_T["Log out"]</a>
                 }
                 else
                 {
-                    <a asp-area="" asp-controller="Account" asp-action="Register">@_TT["Register"]</a><span> | </span>
-                    <a asp-area="" asp-controller="Account" asp-action="Login">@_TT["Log in"]</a>
+                    <a asp-area="" asp-controller="Account" asp-action="Register">@_T["Register"]</a><span> | </span>
+                            <a asp-area="" asp-controller="Account" asp-action="Login">@_T["Log in"]</a>
                 }
             }
         </div>
-
         <div class="topWidgetZone">
             @{
                 var zoneTopWidgets = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "TopBar" && x.LayoutName == ViewBag.CurrentLayout).ToList();
@@ -61,8 +54,8 @@
                             foreach (var widget in widgets)
                             {
                                 widget.Init(item.Id);
-                                if (string.IsNullOrEmpty(widget.Language) || string.IsNullOrEmpty(currentLanguage) || currentLanguage == widget.Language)
-                                { 
+                                if (string.IsNullOrEmpty(widget.Language) || string.IsNullOrEmpty(ThemeHelper.GetCurrentLanguage()) || ThemeHelper.GetCurrentLanguage().ToLower() == widget.Language)
+                                {
                                     if (widget.DisplayTitle != "" || widget.Footer != "")
                                     {
                                         <div class='panel panel-default'>
@@ -98,4 +91,3 @@
         </div>
     </div>
 </div>
-
