--- a/NetCoreCMS.Web/Themes/Default/Shared/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/_ViewImports.cshtml
@@ -1,12 +1,13 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@inherits NccRazorPage<TModel>
 
+@using NetCoreCMS.Framework.Themes
 @using NetCoreCMS.Framework.Core
 @using Microsoft.AspNetCore.Identity
 @using NetCoreCMS.Framework.Utility
 @using NetCoreCMS.Framework.Modules
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
-@using NetCoreCMS.Framework.Themes
+@using NetCoreCMS.Framework.Core.Mvc.Views
 @using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
 @using NetCoreCMS.Themes.Default.Lib
 @using Microsoft.Extensions.Localization
@@ -15,9 +16,9 @@
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 @inject SignInManager<NccUser> SignInManager
 @inject UserManager<NccUser> UserManager
-
 @inject NccLanguageDetector LanguageDetector
 @inject IStringLocalizer _T
 
