--- a/NetCoreCMS.Web/Themes/Default/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@inherits NccRazorPage<TModel>
 
+@using NetCoreCMS.Framework.Themes
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Localization
 
@@ -16,11 +17,12 @@
 
 @using Microsoft.Extensions.Localization
 @using NetCoreCMS.Framework.i18n
-@using NetCoreCMS.Framework.Themes
+@using NetCoreCMS.Framework.Core.Mvc.Views
 
 @addTagHelper *, NetCoreCMS.Framework
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 @inject SignInManager<NccUser> SignInManager
 @inject UserManager<NccUser> UserManager
 @inject NccLanguageDetector LanguageDetector
