--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/_ViewImports.cshtml
@@ -1,10 +1,6 @@
 ﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 
 @using NetCoreCMS.Framework.Core
-@using NetCoreCMS.Core.Modules.Cms
-@using NetCoreCMS.Core.Modules.Cms.Models
-@using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
-@using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 
 @using NetCoreCMS.Framework.Utility
@@ -12,6 +8,7 @@
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Themes
+@using NetCoreCMS.Framework.Core.Mvc.Views
 @using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
 @using Microsoft.Extensions.Localization
 @using NetCoreCMS.Framework.i18n
@@ -21,5 +18,5 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @inject SignInManager<NccUser> SignInManager
-@inject UserManager<NccUser> UserManager 
+@inject UserManager<NccUser> UserManager
 @inject NccLanguageDetector LanguageDetector
