--- a/NetCoreCMS.Web/Themes/NccSeventeen/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Views/_ViewImports.cshtml
@@ -1,15 +1,13 @@
 ﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 
-@using NetCoreCMS.Core.Modules.Cms
-@using NetCoreCMS.Core.Modules.Cms.Models
-@using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
-@using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
+@using NetCoreCMS.Framework.Core
 @using Microsoft.AspNetCore.Identity
 @using NetCoreCMS.Framework.Utility
 @using NetCoreCMS.Framework.Modules
 @using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Framework.Themes
+@using NetCoreCMS.Framework.Core.Mvc.Views
 @using NetCoreCMS.Framework.Core.Mvc.Views.Extensions
 @using NetCoreCMS.Themes.NccSeventeen.Lib
 @using Microsoft.Extensions.Localization
