major changes have made in theme system.

--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Head.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_Head.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     var currentLanguage = LanguageDetector.GetCurrentLanguage();
-    NccTranslator<ThemeTranslation> _TT = new NccTranslator<ThemeTranslation>(currentLanguage);
+    CurrentLanguage = currentLanguage;
+    CurrentLayout = ThemeResources.Layouts.SiteLayout.Name;
+    NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(currentLanguage);
 }
 
 <meta charset="utf-8" />
