--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     BodyWidth = 12;
-    CurrentLayout = "SiteLayout";
-    ViewBag.CurrentLayout = "SiteLayout";
+    CurrentLayout = ThemeResources.Layouts.SiteLayout.Name;
+    //ViewBag.CurrentLayout = "SiteLayout";
     var currentLanguage = ThemeHelper.GetCurrentLanguage();
     CurrentLanguage = currentLanguage;
-    NccTranslator<ThemeTranslation> _TT = new NccTranslator<ThemeTranslation>(currentLanguage);
+    NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(currentLanguage);
 }
 
 <!DOCTYPE html>
@@ -21,7 +21,7 @@
 
     <body id="body">   
         <!-- Loading -->
-        <div id="loadingMask" class="loader loader-double"></div> 
+        @Html.Raw(NccRenderLoadingMaskContainer()) 
         <!-- Header -->
         @Html.Raw(NccRenderHeader())
 
@@ -45,117 +45,18 @@
                 @Html.Raw(NccRenderFeaturedSection())
                 <!-- Container for showing global messages. -->
                 <div class="row">
-                    <div id="globalMessageContainer" class="ncc-global-message">
-
-                    </div>
+                    @Html.Raw(NccRenderGlobalMessageContainer())
                 </div>
                 @RenderBody()
             </div>
             <!-- Main content End -->
-
         </div>
         <!--  Main Body End -->
 
         <!--  Footer Start -->
-        <footer>
-            <hr />
-            <div class="container">
-                <div class="row">
-                    @{
-                        bool hasFooter = false;
-                        var menusFooter = GlobalConfig.Menus.Where(x => x.Position == "Footer").ToList();
-                        var zoneFooterWidgets = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "Footer" && x.LayoutName == ViewBag.CurrentLayout).ToList();
-                        if ((menusFooter != null && menusFooter.Count > 0) || (zoneFooterWidgets != null && zoneFooterWidgets.Count > 0))
-                        {
-                            hasFooter = true;
-                        }
-                <!-- Footer Menu Start -->
-                        if (menusFooter != null && menusFooter.Count > 0)
-                        {
-                            <div class="col-md-6">
-                                @foreach (var item in menusFooter)
-                                {
-                                    foreach (var menuItem in item.MenuItems)
-                                    {
-                                        <a href="@menuItem.Url">@menuItem.Name</a><br />
-                                        foreach (var mi2 in menuItem.Childrens)
-                                        {
-                                            <span>&nbsp;&nbsp;--</span><a href="@mi2.Url">@mi2.Name</a><br />
-                                            foreach (var mi3 in mi2.Childrens)
-                                            {
-                                                <span>&nbsp;&nbsp;&nbsp;&nbsp;--</span><a href="@mi3.Url">@mi3.Name</a><br />
-                                                foreach (var mi4 in mi3.Childrens)
-                                                {
-                                                    <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;--</span><a href="@mi4.Url">@mi4.Name</a><br />
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                            </div>
-                        }
-                <!-- Footer Menu End -->
-
-                <!-- Footer Widgets Start -->
-                        if (zoneFooterWidgets != null && zoneFooterWidgets.Count > 0)
-                        {
-                            <div class="col-md-12">
-                                @foreach (var item in zoneFooterWidgets)
-                                {
-                                    var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
-                                    foreach (var widget in widgets)
-                                    {
-                                        widget.Init(item.Id);
-                                        if (string.IsNullOrEmpty(widget.Language) || string.IsNullOrEmpty(currentLanguage) || currentLanguage.ToLower() == widget.Language.ToLower())
-                                        { 
-                                            if (widget.DisplayTitle != "" || widget.Footer != "")
-                                            {
-                                                <div class='panel panel-default'>
-                                                    @if (widget.DisplayTitle != "")
-                                                    {
-                                                        <div class='panel-heading'>
-                                                            @Html.Raw(widget.DisplayTitle)
-                                                        </div>
-                                                    }
-                                                    <div class='panel-body'>
-                                                        @Html.Raw(widget.RenderBody())
-                                                    </div>
-                                                    @if (widget.Footer != "")
-                                                    {
-                                                        <div class='panel-footer'>
-                                                            @Html.Raw(widget.Footer)
-                                                        </div>
-                                                    }
-                                                </div>
-                                            }
-                                            else
-                                            {
-                                                <div>
-                                                    @Html.Raw(widget.RenderBody())
-                                                </div>
-                                            }
-                                        }
-                                    }
-                                }
-                            </div>
-                        }
-                <!-- Footer Widgets End -->
-                    }
-
-                </div>
-            </div>
-            @if (hasFooter)
-            {
-                <hr />
-            }
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 copyright"> @_T["Copyrights"] &copy; @Html.Raw(ThemeHelper.GetWebSiteCopyright()) @_T[DateTime.Now.Year.ToString()]</div>
-                    <div class="col-md-6 poweredby"> @Html.Raw( string.Format(_T["Developed using {0}"].ToString(), "<a href=\"" + @NccInfo.Website + "\" target=\"_blank\">NetCoreCMS" + " v" + NccInfo.Version + "</a>"))</div>
-                </div>
-            </div>
-        </footer>
+        @Html.Raw(NccRenderFooter())
         <!--  Footer End -->
+
         <script type="text/javascript">
             $(document).ready(function () {
                 var didScroll = true;
