Major changes made in Theme system (continued).

--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -21,9 +21,9 @@
 
     <body id="body">   
         <!-- Loading -->
-        @Html.Raw(NccRenderLoadingMaskContainer()) 
+        @NccRenderLoadingMaskContainer()
         <!-- Header -->
-        @Html.Raw(NccRenderHeader())
+        @NccRenderHeader()
 
         <!-- Navbar -->
         @Html.Raw(NccRenderNavigation())    
