--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -1,22 +1,22 @@
 ﻿@{
     BodyWidth = 12;
-    CurrentLayout = ThemeResources.Layouts.SiteLayout.Name;
-    //ViewBag.CurrentLayout = "SiteLayout";
-    var currentLanguage = ThemeHelper.GetCurrentLanguage();
-    CurrentLanguage = currentLanguage;
-    NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(currentLanguage);
+    CurrentLayout   = ThemeResources.Layouts.SiteLayout.Name;
+    CurrentLanguage = ThemeHelper.GetCurrentLanguage();
+    NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(CurrentLanguage);
 }
 
 <!DOCTYPE html>
 <html>
     
     <head>        
-        <!-- You must call every View Renderer method inside Html.Raw()-->
-        @Html.Raw(NccRenderHead()) 
-        @RenderSection(ThemeHelper.Sections.StyleHeader, required: false)
-        @RenderSection(ThemeHelper.Sections.ScriptHeader, required: false)        
-        @RenderSection("Styles", required: false)
+        @NccRenderHead()
         @Html.Raw(JavaScriptSnippet.FullScript)
+        @NccRenderHeaderCss()
+        @NccRenderHeaderScripts()
+
+        @RenderSection(ThemeHelper.Sections.StyleHeader, required: false)
+        @RenderSection(ThemeHelper.Sections.ScriptHeader, required: false)
+        @RenderSection("Styles", required: false)
     </head>
 
     <body id="body">   
@@ -57,47 +57,9 @@
         @Html.Raw(NccRenderFooter())
         <!--  Footer End -->
 
-        <script type="text/javascript">
-            $(document).ready(function () {
-                var didScroll = true;
+        @NccRenderFooterCss()
+        @NccRenderFooterScripts()
 
-                $(window).scroll(function () {
-                    didScroll = true;
-                });
-                setInterval(function () {
-                    if (didScroll) {
-                        didScroll = false;
-                        var scroll = $(window).scrollTop();
-                        //console.log(scroll);
-                        //Same that all the if else statements
-                        switch (true) {
-                            case (scroll >= 100):
-                                $("#mainNavbar").addClass("navbar-fixed-top");
-                                $("#navbarWebsiteName").removeClass("navbar-brand-with-top-menu");
-                                break;
-                            case (scroll <= 50):
-                                $("#mainNavbar").removeClass("navbar-fixed-top");
-                                $("#navbarWebsiteName").addClass("navbar-brand-with-top-menu");
-                                break;
-                            default:
-                                break;
-                        }
-                    }
-                }, 50);
-
-                $('.ncc-main-menu').find('a').each(function () {
-                    var pathname = decodeURI(window.location.pathname);
-                    if (pathname == '/CmsHome')
-                        pathname = "/";
-                    if ($(this).attr('href') == pathname) {
-                        $(this).parents("li").addClass('active');
-                    }
-                    /*console.log($(this).attr('href'));
-                    console.log(pathname);*/
-                });
-
-            });
-        </script>
         @RenderSection(ThemeHelper.Sections.StyleFooter, required: false)
         @RenderSection(ThemeHelper.Sections.ScriptFooter, required: false)
         @RenderSection("Scripts", required: false)
